# pyvid

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: slow_closeup.ipynb
pyvid/: __init__.py  scene.py  time_mesh.py
test/: test.py  visualize.py
