[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvid"
version = "0.1.1"
description = "a 3D animation cdata visualization tool based on pyvista."
authors = [{ name = "Zhengyang Liu", email = "liuzy19911112@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "dependencies",
    "pyqt5",
    "pyvista",
    "pyvistaqt",
    "scipy",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/zloverty/pyvid"

[tool.setuptools]
packages = ["pyvid"]

